--- a/Codes/4.DistanceMatriz.ipynb
+++ b/Codes/4.DistanceMatriz.ipynb
@@ -13999,20 +13999,20 @@
     "import numpy as np\n",
     "from geopy.distance import geodesic\n",
     "\n",
-    "# Cargar el archivo Excel\n",
+    "# Load the Excel file\n",
     "file_path = '../DataIn/Centroides.xlsx'  \n",
     "xls = pd.ExcelFile(file_path)\n",
     "\n",
-    "# Cargar la hoja `matriz_de_distancia` en un DataFrame\n",
+    "# Load the `matriz_de_distancia` sheet into a DataFrame\n",
     "df = pd.read_excel(xls, sheet_name='centroides_nome_atu')\n",
     "\n",
-    "# Asumimos que el DataFrame contiene las columnas '0_Nome_atu', 'X', 'Y'\n",
+    "# Assume the DataFrame contains the columns '0_Nome_atu', 'X', 'Y'\n",
     "productores = df['0_Nome_atu'].unique()\n",
     "\n",
-    "# Crear una lista para almacenar las distancias promedio entre parcelas de cada productor\n",
+    "# Create a list to store the average distances between parcels for each producer\n",
     "dist_avg_per_productor = []\n",
     "\n",
-    "# Calcular la distancia promedio entre parcelas de cada productor\n",
+    "# Calculate the average distance between parcels for each producer\n",
     "for productor in productores:\n",
     "    parcelas = df[df['0_Nome_atu'] == productor]\n",
     "    coords = parcelas[['X', 'Y']].values\n",
@@ -14023,14 +14023,15 @@
     "            if i != j:\n",
     "                dist_matrix[i, j] = geodesic(coords[i], coords[j]).meters\n",
     "                \n",
-    "    # Calcular la distancia promedio\n",
+    "    # Calculate the average distance\n",
     "    avg_distance = np.mean(dist_matrix[np.triu_indices(len(coords), k=1)])\n",
-    "    dist_avg_per_productor.append((productor, avg_distance))\n"
+    "    dist_avg_per_productor.append((productor, avg_distance))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -14054,20 +14055,20 @@
     "import numpy as np\n",
     "from geopy.distance import geodesic\n",
     "\n",
-    "# Cargar el archivo Excel\n",
+    "# Load the Excel file\n",
     "file_path = '../DataIn/Centroides.xlsx'  \n",
     "xls = pd.ExcelFile(file_path)\n",
     "\n",
-    "# Cargar la hoja `matriz_de_distancia` en un DataFrame\n",
+    "# Load the `centroides_nome_atu` sheet into a DataFrame\n",
     "df = pd.read_excel(xls, sheet_name='centroides_nome_atu')\n",
     "\n",
-    "# Asumimos que el DataFrame contiene las columnas '0_Nome_atu', 'X', 'Y'\n",
+    "# Assume the DataFrame contains the columns '0_Nome_atu', 'X', 'Y'\n",
     "productores = df['0_Nome_atu'].unique()\n",
     "\n",
-    "# Crear una lista para almacenar las distancias promedio entre parcelas de cada productor\n",
+    "# Create a list to store the average distances between parcels for each producer\n",
     "dist_avg_per_productor = []\n",
     "\n",
-    "# Calcular la distancia promedio entre parcelas de cada productor\n",
+    "# Calculate the average distance between parcels for each producer\n",
     "for productor in productores:\n",
     "    parcelas = df[df['0_Nome_atu'] == productor]\n",
     "    coords = parcelas[['X', 'Y']].values\n",
@@ -14078,14 +14079,14 @@
     "            if i != j:\n",
     "                dist_matrix[i, j] = geodesic(coords[i], coords[j]).meters\n",
     "                \n",
-    "    # Calcular la distancia promedio\n",
+    "    # Calculate the average distance\n",
     "    avg_distance = np.mean(dist_matrix[np.triu_indices(len(coords), k=1)])\n",
     "    dist_avg_per_productor.append((productor, avg_distance))\n",
     "\n",
-    "# Convertir la lista en un DataFrame\n",
-    "dist_avg_df = pd.DataFrame(dist_avg_per_productor, columns=['productor', 'avg_dist_within'])\n",
+    "# Convert the list into a DataFrame\n",
+    "dist_avg_df = pd.DataFrame(dist_avg_per_productor, columns=['producer', 'avg_dist_within'])\n",
     "\n",
-    "# Crear una matriz de distancias promedio entre productores\n",
+    "# Create a matrix of average distances between producers\n",
     "dist_matrix_between_productores = np.zeros((len(productores), len(productores)))\n",
     "\n",
     "for i in range(len(productores)):\n",
@@ -14099,8 +14100,9 @@
     "                    dists.append(geodesic(coord_i, coord_j).meters)\n",
     "            dist_matrix_between_productores[i, j] = np.mean(dists)\n",
     "\n",
-    "# Crear un DataFrame con los nombres de los productores y la matriz de distancias entre productores\n",
+    "# Create a DataFrame with the producer names and the matrix of distances between producers\n",
     "dist_matrix_between_productores_df = pd.DataFrame(dist_matrix_between_productores, index=productores, columns=productores)\n",
+    "\n",
     "\n"
    ]
   },
@@ -14110,7 +14112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Guardar la matriz de distancias y las distancias promedio en un archivo Excel\n",
+    "# Save the matrix of distances and average distances in an Excel file\n",
     "output_path = '../DataIntermediate/Matriz_distancia_calculada.xlsx'\n",
     "with pd.ExcelWriter(output_path) as writer:\n",
     "    dist_matrix_between_productores_df.to_excel(writer, sheet_name='Matriz_de_Distancias_Entre_Productores')\n",
@@ -14134,21 +14136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Realizar PCA sobre la matriz de distancias\n",
+    "# Perform PCA on the matrix of distances\n",
     "pca = PCA(n_components=2)\n",
     "pca_result = pca.fit_transform(dist_matrix_between_productores_df)\n",
-    "\n",
-    "# Crear un DataFrame con los resultados del PCA\n",
+    "# Create a DataFrame with the PCA results.\n",
     "pca_df = pd.DataFrame(pca_result, columns=['PC1', 'PC2'], index=productores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -14163,28 +14164,27 @@
     }
    ],
    "source": [
-    "# Realizar PCA sobre la matriz de distancias\n",
+    "# Perform PCA on the distance matrix\n",
     "pca = PCA(n_components=2)\n",
     "pca_result = pca.fit_transform(dist_matrix_between_productores_df)\n",
     "\n",
-    "# Crear un DataFrame con los resultados del PCA\n",
+    "# Create a DataFrame with the PCA results\n",
     "pca_df = pd.DataFrame(pca_result, columns=['PC1', 'PC2'], index=dist_matrix_between_productores_df.index)\n",
     "\n",
-    "# Calcular el porcentaje de varianza explicada por cada componente principal\n",
+    "# Calculate the percentage of variance explained by each principal component\n",
     "explained_variance = pca.explained_variance_ratio_\n",
     "\n",
-    "\n",
-    "# Guardar la matriz de distancias, las distancias promedio y los resultados del PCA en un archivo Excel\n",
+    "# Save the distance matrix, average distances, and PCA results to an Excel file\n",
     "output_path = '../DataIntermediate/Matriz_distancia_calculada_con_PCA.xlsx'\n",
     "with pd.ExcelWriter(output_path) as writer:\n",
     "    pca_df.to_excel(writer, sheet_name='PCA_Result')\n",
     "\n",
-    "# Graficar los resultados del PCA sin etiquetas\n",
+    "# Plot the PCA results without labels\n",
     "plt.figure(figsize=(10, 7))\n",
     "plt.scatter(pca_df['PC1'], pca_df['PC2'])\n",
-    "plt.title(f'PCA de las Distancias entre Productores\\nPC1: {explained_variance[0]*100:.2f}% de la varianza, PC2: {explained_variance[1]*100:.2f}% de la varianza')\n",
-    "plt.xlabel(f'PC1 ({explained_variance[0]*100:.2f}% de la varianza)')\n",
-    "plt.ylabel(f'PC2 ({explained_variance[1]*100:.2f}% de la varianza)')\n",
+    "plt.title(f'PCA of Distances between Producers\\nPC1: {explained_variance[0]*100:.2f}% variance, PC2: {explained_variance[1]*100:.2f}% variance')\n",
+    "plt.xlabel(f'PC1 ({explained_variance[0]*100:.2f}% variance)')\n",
+    "plt.ylabel(f'PC2 ({explained_variance[1]*100:.2f}% variance)')\n",
     "plt.grid(True)\n",
     "plt.show()\n"
    ]
@@ -14193,22 +14193,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Interpretación del Gráfico:*\n",
-    "\n",
-    "El gráfico muestra una dispersión de los puntos en el espacio de los dos primeros componentes principales (PC1 y PC2).\n",
-    "La mayor parte de la variabilidad en los datos se captura en el eje PC1.\n",
-    "Los productores que están cerca uno del otro en este espacio tienen distancias similares entre sus parcelas.\n",
-    "Los productores más alejados en el gráfico tienen distancias más diversas entre sus parcelas.\n",
-    "\n",
-    "*Clusters y Outliers:*\n",
-    "\n",
-    "Puede haber grupos de productores con distancias similares si se observa una agrupación de puntos en ciertas áreas del gráfico.\n",
-    "Los puntos que se encuentran alejados del centro o de los grupos principales pueden considerarse outliers. Estos representan productores cuyas distancias son significativamente diferentes de las demás."
+    " \n",
+    "*Interpretation of the Graph:*.\n",
+    "The graph shows a spread of points in the space of the first two principal components (PC1 and PC2).\n",
+    "Most of the variability in the data is captured on the PC1 axis.\n",
+    "Producers that are close to each other in this space have similar distances between their plots.\n",
+    "Producers farther apart on the graph have more diverse distances between their plots.\n",
+    "*Clusters and Outliers.\n",
+    "There may be groups of producers with similar distances if a clustering of points is observed in certain areas of the graph.\n",
+    "Points that are far from the center or main clusters can be considered outliers. These represent producers whose distances are significantly different from the others."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -14224,21 +14222,21 @@
     "from geopy.distance import geodesic\n",
     "import numpy as np\n",
     "\n",
-    "# Cargar datos de las casas de los productores\n",
+    "# Load data for producers' houses\n",
     "casas_df = pd.read_excel('../DataIn/VarExpl/Puntos_moranza.xlsx') \n",
     "\n",
-    "# Cargar datos de las parcelas\n",
+    "# Load data for parcels\n",
     "parcels_df = pd.read_excel('../DataIn/Centroides.xlsx', sheet_name='Hoja1')  \n",
-    "parcels_df = parcels_df[['0_Nome_atu', 'X', 'Y']]  # Ajusta las columnas según tus datos\n",
+    "parcels_df = parcels_df[['0_Nome_atu', 'X', 'Y']]  # Adjust columns according to your data\n",
     "\n",
-    "# Renombrar las columnas para consistencia\n",
-    "casas_df.columns = ['Nombre', 'X_casa', 'Y_casa']\n",
-    "parcels_df.columns = ['Nombre', 'X_parcela', 'Y_parcela']\n",
+    "# Rename columns for consistency\n",
+    "casas_df.columns = ['Name', 'X_house', 'Y_house']\n",
+    "parcels_df.columns = ['Name', 'X_parcel', 'Y_parcel']\n",
     "\n",
-    "# Crear una lista para almacenar las distancias promedio\n",
+    "# Create a list to store average distances\n",
     "dist_avg_list = []\n",
     "\n",
-    "# Calcular la distancia promedio de la casa a las parcelas para cada productor\n",
+    "# Calculate the average distance from the house to the parcels for each producer\n",
     "for nombre in casas_df['Nombre'].unique():\n",
     "    casa = casas_df[casas_df['Nombre'] == nombre].iloc[0]\n",
     "    parcelas = parcels_df[parcels_df['Nombre'] == nombre]\n",
