Con nombre variables

--- a/Codes/4.RF_with_indeg_outdg.ipynb
+++ b/Codes/4.RF_with_indeg_outdg.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,37 +372,36 @@
     "    ]\n",
     "\n",
     "\n",
-    "#RAW NEW MODEL\n",
+    "#All variables + Description\n",
     "# variables = [\n",
     "#     'id',\n",
-    "#     'Indeg_RedConfltAgu',\n",
-    "#     'Degree_IntimAmigUnd',\n",
-    "#     'Indeg_IntimAmigos_',\n",
-    "#     'Indeg_RedeRisk_Cen',\n",
-    "#     'Indeg_RedeConfianc',\n",
-    "#     'Degree_RedeConflitA',\n",
-    "#     'Degree_RedeConflitG',\n",
-    "#     'Indeg_VendaParcela',\n",
-    "#     'Indeg_EmprestParce',\n",
-    "#     'PC1_Distance_Pro',\n",
-    "#     'Avg_Distancia_Dist_moranza',\n",
-    "#     'Degree_RedeTotFamil',\n",
-    "#     '1_VarExp_Moranca',\n",
-    "#     '2_VarExp_Atri_Tabanca',\n",
-    "#     '3_VarExp_Atri_Fanado',\n",
-    "#     '4_VarExp_Atri_CargosWM',\n",
-    "#     '5_VarExp_Atri_Idade',\n",
-    "#     '7_VarExp_Atri_IndForcaFugon',\n",
-    "#     '8_VarExp_Atri_IndInvestDiq',\n",
-    "#     '9_VarExp_Atri_IndMelhorTecnDiqCint',\n",
-    "#     '10_VarExp_Atri_MelhorTecnTubos', \n",
-    "#     'Area_bolanha',\n",
-    "#     'OutDeg_RedConfltAgu', # OUTDEG variables\n",
-    "#     'OutDeg_IntimAmigos_',\n",
-    "#     'OutDeg_RedeRisk_Cen',\n",
-    "#     'OutDeg_RedeConfianc',\n",
-    "#     'OutDeg_VendaParcela',\n",
-    "#     'OutDeg_EmprestParce']\n"
+    "#     'Degree_RedConfliAgua' = Water management (past and present) conflicts degree,\n",
+    "#     'Degree_RedIrmonsPr' = cousins degree,\n",
+    "#     'Indeg_TiospatermC' = paternal uncles in-degree,\n",
+    "#     'Indeg_TiosMaternos' = maternal uncles in-degree,\n",
+    "#     'Indeg_IntimAmigos_' = Close friends in-degree,\n",
+    "#     'Indeg_RedeRisk_Cen' = Water management risks in-degree ,\n",
+    "#     'Degree_RedeConflitA' =\tWater management (ongoing) conflicts degree,\n",
+    "#     'Indeg_VendaParcela' = Lend rice paddies in-degree ,\n",
+    "#     'Indeg_EmprestParce' = Mortgaged rice paddies in-degree,\n",
+    "#     'PC1_Distance_Pro' = Principal Component Analysis (PCA) of the average distances between all plots cultivated by farmers,\n",
+    "#     'Avg_Distancia_Dist_moranza' = average distance from home to cultivated HHs´ clustered plots,\n",
+    "#     'Degree_RedeTotFamil' = Close family degree,\t \n",
+    "#     '1_VarExp_Moranca' = participant compound,\n",
+    "#     '2_VarExp_Atri_Tabanca' = participant village,\n",
+    "#     '3_VarExp_Atri_Fanado' = undergone the adult initiation ceremony (or 'fanado'),\n",
+    "#     '4_VarExp_Atri_CargosWM' = participant belongs to the water management committee ,\n",
+    "#     '5_VarExp_Atri_Idade' = participant age,\n",
+    "#     '7_VarExp_Atri_IndForcaFugon' = 'Household Labour for Water Management' (HLWM),\n",
+    "#     '8_VarExp_Atri_IndInvestDiq' = Indicator of dike investment level ,\n",
+    "#     '9_VarExp_Atri_IndMelhorTecnDiqCint' = Indicator of the reputation as great dike specialists,\n",
+    "#     '10_VarExp_Atri_MelhorTecnTubos' = Indicator of the reputation as great tube technicians ,\n",
+    "#     'Area_bolanha' = total area of rice paddies,\n",
+    "#     'OutDeg_RedeRisk_Cen' = Water management risks out-degree ,\n",
+    "#     'OutDeg_VendaParcela'= Close friends out-degree,\n",
+    "#     'OutDeg_EmprestParce' = Mortgaged rice paddies out-degree,\n",
+    "#     'OutDeg_TiospatermC' = paternal uncles out-degree,\n",
+    "#     'OutDeg_TiosMaternos' = maternal uncles out-degree   ]\n"
    ]
   },
   {
@@ -596,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7111,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +631,20 @@
     "X = indep_variables_no_ceros.drop(columns=['id'])\n",
     "y = variable_a_predecir\n",
     "\n",
-    "y.head()"
+    "y.head()\n",
+    "\n",
+    "\n",
+    "#List of all dependent/responses variables:\n",
+    "#Indeg_Var.Dep_RedeControlExtAusencia = Cooperation for controlling dikes in case of prolonged absence in-degree \n",
+    "#Indeg_Var.Dep_RedApoioLevantDiCin =\tCooperation for dike maintenance in-degree \n",
+    "#Indeg_Var.Dep_Cont1Rep2DiqCin = Cooperation for dike monitoring and repair in-degree \n",
+    "#Indeg_Var.Dep_ApoioSpeDiqCint = Cooperation in technical advice and support for complex belt dike works in-degree\n",
+    "#Indeg_Var.Dep_ApoioSpeTubos = Cooperation in technical advice and support for installing PVC drainage pipes in-degree\n",
+    "#Outdeg_Var.Dep_RedeControlExtAusencia = Cooperation for controlling dikes in case of prolonged absence out-degree \n",
+    "#Outdeg_Var.Dep_RedApoioLevantDiCin =\tCooperation for dike maintenance out-degree \n",
+    "#Outdeg_Var.Dep_Cont1Rep2DiqCin = Cooperation for dike monitoring and repair out-degree \n",
+    "#Outdeg_Var.Dep_ApoioSpeDiqCint = Cooperation in technical advice and support for complex belt dike works out-degree\n",
+    "#Outdeg_Var.Dep_ApoioSpeTubos = Cooperation in technical advice and support for installing PVC drainage pipes out-degree"
    ]
   },
   {
