--- a/Codes/2.Exploratory_analysis.ipynb
+++ b/Codes/2.Exploratory_analysis.ipynb
@@ -3882,7 +3882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3931,7 +3931,8 @@
     "plt.xticks(rotation=90, fontsize=16)\n",
     "plt.yticks(fontsize=18)\n",
     "plt.tight_layout()  # Adjust layout to avoid label cropping\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "# Comment test"
    ]
   }
  ],
